Fix WeekLinks text overflow

--- a/app/styles/calendar.css
+++ b/app/styles/calendar.css
@@ -16,7 +16,7 @@
 
 .calendar__week {
   display: flex;
-  width: calc(var(--full-size-week-width) - 2rem);
+  min-width: calc(var(--full-size-week-width) - 2rem);
   height: calc(var(--full-size-week-height) - 2rem);
   flex-direction: column;
   justify-content: space-between;
@@ -46,7 +46,7 @@
 .calendar__week:nth-child(2),
 .calendar__week:nth-child(8),
 .calendar__week:nth-child(9) {
-  width: calc(var(--full-size-week-width) - 2.5rem);
+  min-width: calc(var(--full-size-week-width) - 2.5rem);
   height: calc(var(--full-size-week-height) - 2.5rem);
   cursor: initial;
   font-size: var(--fonts-xxxxs);
@@ -54,7 +54,7 @@
 }
 
 .calendar__week:nth-child(5) {
-  width: var(--full-size-week-width);
+  min-width: var(--full-size-week-width);
   height: var(--full-size-week-height);
   color: var(--text);
   font-size: var(--fonts-sm);
@@ -66,7 +66,7 @@
 
 .calendar__week:nth-child(4),
 .calendar__week:nth-child(6) {
-  width: calc(var(--full-size-week-width) - 1rem);
+  min-width: calc(var(--full-size-week-width) - 1rem);
   height: calc(var(--full-size-week-height) - 1rem);
   font-size: var(--fonts-xs);
 }
